Versión actualizada del proyecto Parking BNB con mejoras en Home y AuthContext